--- a/public/src/css/feed.css
+++ b/public/src/css/feed.css
@@ -13,15 +13,14 @@
   transition: transform 0.3s;
 }
 
-#create-post video,
-#create-post canvas {
+#create-post video, #create-post canvas {
   width: 512px;
   max-width: 100%;
   display: none;
   margin: auto;
 }
 
-#create-post #pick-image {
+#create-post #pick-image, #create-post #location-loader {
   display: none;
 }
 
